adding initial integration with jwt and signin endpoint
