# cmd/server/docs/swagger.yaml
@@ -6,6 +6,13 @@ definitions:
       message:
         type: string
     type: object
+  authentication.Credentials:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   models.AlbumRequest:
     properties:
       artist:
@@ -182,35 +189,6 @@ paths:
       summary: Find all albums
       tags:
       - albums
-  /api/v1/users:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: User request
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
-      summary: Creates an user
-      tags:
-      - users
   /api/v1/users/{id}:
     get:
       parameters:
@@ -239,6 +217,64 @@ paths:
           schema:
             $ref: '#/definitions/api.Response'
       summary: Find one user by ID
+      tags:
+      - users
+  /api/v1/users/signin:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: SignUp request
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/authentication.Credentials'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: SignIn the user and returns a JWT token
+      tags:
+      - users
+  /api/v1/users/signup:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User request
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: Creates an user
       tags:
       - users
 swagger: "2.0"
